--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,12 +4,13 @@
 <h1>@ViewData["Title"]</h1>
 
 <div id="home">
-    {{count}}
-    {{test}}
+    {{ count }}
+    {{ doneTodos }}
 </div>
 
 
 @section Scripts{
-    <script src="~/js/Reference/HelloWorld.js" asp-append-version="true"></script>
+    <script src="~/js/Reference/Store/Modules/item1.js"></script>
+    <script src="~/js/Reference/HelloWorld.js"></script>
 
 }
