--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -21,7 +21,7 @@
 
 
 @section Scripts{
-    <script src="~/js/Reference/Store/Modules/item1.js"></script>
-    <script src="~/js/Reference/HelloWorld.js"></script>
-
+    <script src="~/js/Reference/Store/Modules/item1.js" asp-append-version="true"></script>
+    <script src="~/js/Reference/HelloWorld.js" asp-append-version="true"></script>
+    s
 }
